Turn off four checks this compiler is written against, and hold one enum's map shut
Each reports a shape the design chooses. A walk keys on the node it
reached, so `IdentityHashMapUsage` is asking for a concrete class in record
components and signatures that say `Map`. A sealed interface holding a
constant of one of its own arms is how a nullary case is written here, and
`ClassInitializationDeadlock` finds dozens. No record with an array
component is compared or keyed on, so what `ArrayRecordComponent` warns of
does not arise. And every field `ImmutableEnumChecker` names is built with
`List.of`, `Set.copyOf` or a copy — telling the check so means annotating
those types, which puts Error Prone's annotations on the compile path.

Reading them found one field that was not: a command's map of what it
reads was a bare `EnumMap` on an enum constant. Every caller sees the one
map, so it is held unmodifiable now.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>